--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ header{
   position: fixed;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.9);
-  padding: 20px;
+  padding: 30px;
   display: flex;
   align-items: center;
   z-index: 100;
@@ -20,10 +20,10 @@ header{
 }
 
 #wave{
-  width:60px;
-  height: 60px;
+  width: 100px;px;
+  height: 100px;px;
   background-image: url(../images/wave.png);
-  background-size: 60px auto;
+  background-size: 100px auto;
   background-position: center center;
   background-repeat: repeat-x;
   margin-left: auto;
@@ -35,7 +35,7 @@ header{
   font-size: 100px;
   font-family: 'Roboto', sans-serif;
   line-height: 1;
-  left: 20px;
+  left: 50px;
   z-index: 100;
   cursor: pointer;
 }
