--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,10 @@ header{
 }
 
 #wave{
-  width: 100px;px;
-  height: 100px;px;
+  width:60px;
+  height: 60px;
   background-image: url(../images/wave.png);
-  background-size: 100px auto;
+  background-size: 60px auto;
   background-position: center center;
   background-repeat: repeat-x;
   margin-left: auto;
@@ -35,7 +35,7 @@ header{
   font-size: 100px;
   font-family: 'Roboto', sans-serif;
   line-height: 1;
-  left: 50px;
+  left: px;
   z-index: 100;
   cursor: pointer;
 }
