--- a/css/style.css
+++ b/css/style.css
@@ -1,92 +1,105 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,900&display=swap');
-
-li{
-  list-style: none;
+.slider,
+.thumb{
+    margin: 100px auto;
+    width: 80%;
 }
-
-img{
-  max-width: 100%;
+.slider img,
+.thumb img{
+	height: auto;
+	width: 100%;
+}/*slick setting*/
+.slick-prev:before,
+.slick-next:before{
+    color: rgb(16, 39, 104);
 }
-
-header{
-  position: fixed;
-  width: 100%;
-  background-color: rgba(255, 255, 255, 0.9);
-  padding: 30px;
+body{
+  background: #8bbbd1;
+}
+.site-header{
+  background: #fff;
   display: flex;
-  align-items: center;
-  z-index: 100;
-  top: 0;
-}
-
-#wave{
-  width:60px;
-  height: 60px;
-  background-image: url(../images/wave.png);
-  background-size: 60px auto;
-  background-position: center center;
-  background-repeat: repeat-x;
-  margin-left: auto;
-}
-
-#menu{
+  padding: 60px 20px;
   position: fixed;
-  top: 100px;
-  font-size: 100px;
-  font-family: 'Roboto', sans-serif;
-  line-height: 1;
-  left: px;
-  z-index: 100;
-  cursor: pointer;
+  justify-content: space-between;
+  width: 100%;
 }
-
-#content{
-  position: relative;
-  margin: 100px auto;
-  padding: 20px;
-  max-width: 1000px;
+.site-logo img{
+  height: 20px;
+  width: auto;
 }
-
-.set{
-  background-color: #ccc;
-  min-height: 400px;
+.gnav__menu{
+  display: flex;
+}
+.gnav__menu__item{
+  margin-left: 20px;
+}
+.gnav__menu__item a{
+  color: #333;
+  text-decoration: none;
+}
+.hero{
+  max-height: 500px;
+  overflow: hidden;
+}
+.hero img{
+  height: auto;
+  width: 100%;
+}
+.content{
+  line-height: 1.6;
+  margin: 0 auto;
+  padding-top: 100px;
+  width: 800px;
+}
+.content p{
   margin-bottom: 40px;
 }
-
-body.one #backimg01,
-body.two #backimg02,
-body.three #backimg03{
-  opacity: 1;
+.site-footer{
+  background: #333;
+  padding: 10px 0;
 }
-
-#back{
-  position: fixed;
+.copyright{
+  color: rgb(107, 213, 255);
+  font-size: 12px;
+  text-align: center;
+}
+header {
+  display: flex;
   width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: #fcfcfc;
+  height: 100px;
+  background-color: rgb(247, 246, 255);
+  align-items: center;
 }
 
-.backimg{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  opacity: 0;
-  transition: 1s all;
+
+.title {
+  margin-right: auto;
+}
+ 
+.menu-item {
+  list-style: none;
+  display: inline-block;
+  padding: 10px;
 }
 
-img{
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.grid {
+	margin-bottom: 1.6em;
+}
+.grid-item {
+	width: 200px;
+}
+.grid-item img {
+	margin: 0;
+	vertical-align: bottom;
 }
 
-#line{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 0;
-  height: 3px;
-  background: linear-gradient(to right, blue,red);
+.grid {
+	margin-bottom: 1.6em;
+}
+.grid-item {
+	width: 200px;
+	padding: 2px;
+}
+.grid-item img {
+	vertical-align: bottom;
 }
