--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,25 @@
+.inner {
+	width: 520px;
+	max-width: 100%;
+	margin: 0 auto;
+	background: #eee;
+}
+
+.full {
+	background: #26a69a;
+	padding: 4px 8px;
+}
+
+.body {
+	padding: 4px 8px;
+	margin-top: 12px;
+}
+.full {
+	background: #26a69a;
+	padding: 4px 8px;
+	margin: 0 calc(50% - 50vw);
+	width: 100vw;
+}
 .slider,
 .thumb{
     margin: 100px auto;
