--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,3 @@
-.inner {
-	width: 520px;
-	max-width: 100%;
-	margin: 0 auto;
-	background: #eee;
-}
-
-.full {
-	background: #26a69a;
-	padding: 4px 8px;
-}
-
-.body {
-	padding: 4px 8px;
-	margin-top: 12px;
-}
 .full {
 	background: #26a69a;
 	padding: 4px 8px;
@@ -124,4 +108,22 @@ header {
 }
 .grid-item img {
 	vertical-align: bottom;
+}
+.inner {
+	width: 520px;
+	max-width: 100%;
+	margin: 0 auto;
+	background: #eee;
+}
+
+.full {
+	background: #26a69a;
+	padding: 4px 8px;
+}
+
+.body {
+	padding: 4px 8px;
+	margin-top: 12px;
+  margin: 0 calc(50% - 50vw);
+	width: 100vw;
 }
